--- a/Filmodud/appsettings.json
+++ b/Filmodud/appsettings.json
@@ -1,8 +1,11 @@
 {
+  "ConnectionStrings": {
+    "MoviesDatabase": "Server=localhost;Port=5432;Database=Movies;User Id=postgres;Password=postgres;"
+  },
+  "AllowedHosts": "*",
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
     }
-  },
-  "AllowedHosts": "*"
+  }
 }
