--- a/Filmodud/Filmodud.csproj
+++ b/Filmodud/Filmodud.csproj
@@ -22,6 +22,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
+    <PackageReference Include="Npgsql" Version="5.0.4" />
   </ItemGroup>
 
 </Project>
